Fix text cropping on Team page

--- a/assets/themes/lab/css/style.scss
+++ b/assets/themes/lab/css/style.scss
@@ -398,3 +398,13 @@ strong {
   vertical-align:super;
   font-size:0.8em;
 }
+
+img {
+	max-width: 100%;
+  height: auto;
+}
+
+.media-body {
+	display: table-cell;
+  vertical-align: top;
+}
